--- a/main.ipynb
+++ b/main.ipynb
@@ -6,76 +6,40 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kkatodus/hellorobot/dm_control/dm_venv/lib/python3.12/site-packages/glfw/__init__.py:914: GLFWError: (65544) b'X11: The DISPLAY environment variable is missing'\n",
+      "  warnings.warn(message, GLFWError)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "action_spec BoundedArray(shape=(10,), dtype=dtype('float64'), name=None, minimum=[-1.    -1.    -0.5    0.    -1.75  -1.75  -1.75  -0.005 -3.9   -1.53 ], maximum=[1.   1.   0.6  0.52 4.   4.   4.   0.04 1.5  0.79])\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward None\n",
-      "discount None\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n",
-      "observation OrderedDict({'something': [0, 0]})\n",
-      "reward 0\n",
-      "discount 1.0\n"
+      "action_spec BoundedArray(shape=(10,), dtype=dtype('float64'), name=None, minimum=[-1.    -1.    -0.5    0.    -1.75  -1.75  -1.75  -0.005 -3.9   -1.53 ], maximum=[1.   1.   0.6  0.52 4.   4.   4.   0.04 1.5  0.79])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kkatodus/hellorobot/dm_control/dm_venv/lib/python3.12/site-packages/glfw/__init__.py:914: GLFWError: (65537) b'The GLFW library is not initialized'\n",
+      "  warnings.warn(message, GLFWError)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Failed to create window",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m*\u001b[39maction_spec\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Launch the viewer application.\u001b[39;00m\n\u001b[0;32m---> 21\u001b[0m \u001b[43mviewer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlaunch\u001b[49m\u001b[43m(\u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpolicy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrandom_policy\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/hellorobot/dm_control/dm_venv/lib/python3.12/site-packages/dm_control/viewer/__init__.py:39\u001b[0m, in \u001b[0;36mlaunch\u001b[0;34m(environment_loader, policy, title, width, height)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlaunch\u001b[39m(environment_loader, policy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExplorer\u001b[39m\u001b[38;5;124m'\u001b[39m, width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1024\u001b[39m,\n\u001b[1;32m     23\u001b[0m            height\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m768\u001b[39m):\n\u001b[1;32m     24\u001b[0m \u001b[38;5;250m  \u001b[39m\u001b[38;5;124;03m\"\"\"Launches an environment viewer.\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \n\u001b[1;32m     26\u001b[0m \u001b[38;5;124;03m  Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;124;03m      ValueError: When 'environment_loader' argument is set to None.\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;124;03m  \"\"\"\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m   app \u001b[38;5;241m=\u001b[39m \u001b[43mapplication\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mApplication\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtitle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtitle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mheight\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m   app\u001b[38;5;241m.\u001b[39mlaunch(environment_loader\u001b[38;5;241m=\u001b[39menvironment_loader, policy\u001b[38;5;241m=\u001b[39mpolicy)\n",
+      "File \u001b[0;32m~/hellorobot/dm_control/dm_venv/lib/python3.12/site-packages/dm_control/viewer/application.py:187\u001b[0m, in \u001b[0;36mApplication.__init__\u001b[0;34m(self, title, width, height)\u001b[0m\n\u001b[1;32m    185\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_renderer \u001b[38;5;241m=\u001b[39m renderer\u001b[38;5;241m.\u001b[39mNullRenderer()\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_viewport \u001b[38;5;241m=\u001b[39m renderer\u001b[38;5;241m.\u001b[39mViewport(width, height)\n\u001b[0;32m--> 187\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_window \u001b[38;5;241m=\u001b[39m \u001b[43mgui\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRenderWindow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtitle\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    189\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pause_subject \u001b[38;5;241m=\u001b[39m util\u001b[38;5;241m.\u001b[39mObservableFlag(\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    190\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_time_multiplier \u001b[38;5;241m=\u001b[39m util\u001b[38;5;241m.\u001b[39mTimeMultiplier(\u001b[38;5;241m1.\u001b[39m)\n",
+      "File \u001b[0;32m~/hellorobot/dm_control/dm_venv/lib/python3.12/site-packages/dm_control/viewer/gui/glfw_gui.py:191\u001b[0m, in \u001b[0;36mGlfwWindow.__init__\u001b[0;34m(self, width, height, title, context)\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_context \u001b[38;5;241m=\u001b[39m context \u001b[38;5;129;01mor\u001b[39;00m DoubleBufferedGlfwContext(width, height, title)\n\u001b[1;32m    190\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_context\u001b[38;5;241m.\u001b[39mwindow:\n\u001b[0;32m--> 191\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFailed to create window\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    193\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_oldsize \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    195\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_context\u001b[38;5;241m.\u001b[39mmake_current() \u001b[38;5;28;01mas\u001b[39;00m ctx:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Failed to create window"
      ]
     }
    ],
@@ -87,6 +51,8 @@
     "env = suite.load(domain_name=\"stretch3\", task_name=\"test\")\n",
     "action_spec = env.action_spec()\n",
     "print('action_spec', action_spec)\n",
+    "launch_viewer = False\n",
+    "\n",
     "\n",
     "# Define a uniform random policy.\n",
     "def random_policy(time_step):\n",
@@ -99,8 +65,56 @@
     "\t\n",
     "\treturn np.array([1]*action_spec.shape[0])\n",
     "\n",
-    "# Launch the viewer application.\n",
-    "viewer.launch(env, policy=random_policy)"
+    "if launch_viewer:\n",
+    "\t# Launch the viewer application.\n",
+    "\tviewer.launch(env, policy=random_policy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: MUJOCO_GL=egl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env MUJOCO_GL=egl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.Simulator import Simulator\n",
+    "\n",
+    "sim = Simulator()\n",
+    "sim.set_policy('random')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim.run_sim()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim.launch_viewer()"
    ]
   },
   {
